2009-11-27  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/O16384.c: New test.

2009-11-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/41807
	* gfortran.dg/data_value_1.f90: Update test.
	* gfortran.dg/array_constructor_32.f90: New test.

2009-11-23  Uros Bizjak  <ubizjak@gmail.com>

	PR target/42113
	* gcc.target/alpha/pr42113.c: New test.

2009-11-20  H.J. Lu  <hongjiu.lu@intel.com>

	* c-c++-common/pr41935.c: Removed.
	* g++.dg/template/crash92.C: Likewise.
	* gfortran.dg/missing_optional_dummy_6.f90: Likewise.

2009-11-20  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-11-18  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/41926
	* gcc.dg/vect/vect-debug-pr41926.c: New.

	2009-11-16  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/42055
	* g++.dg/template/crash92.C: New.

	2009-11-08  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/41928
	* gfortran.dg/pr41928.f90: New testcase.

	2009-11-06  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/41935
	* gcc.dg/pr41935.c: New test.
	* c-c++-common/pr41935.c: New test.
	* gcc.c-torture/execute/pr41935.c: New test.

	2009-11-04  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41919
	* gcc.c-torture/execute/pr41919.c: New testcase.

	2009-11-03  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41907
	* gfortran.dg/missing_optional_dummy_6.f90: New test.

	2009-11-02  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/41750
	* gcc.c-torture/execute/pr41750.c: New test.

	2009-11-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/41841
	* gcc.dg/pr41841.c: New test.

2009-11-19  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/42090
	* gfortran.dg/direct_io_11.f90: New test.

2009-11-17  Jakub Jelinek  <jakub@redhat.com>

	PR c++/42061
	* g++.dg/cpp0x/initlist27.C: New test.

	PR c++/42059
	* g++.dg/cpp0x/initlist26.C: New test.

2009-11-13  Jason Merrill  <jason@redhat.com>

	PR c++/21008, DR 515
	* g++.dg/template/inherit4.C: New.