@@ -1,3 +1,8 @@
+2009-11-30  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR fortran/41278
+	* gfortran.dg/array_function_5.f90: New test.
+
 2009-11-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/O16384.c: New test.
